--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portafolio</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
+<body class="min-h-screen bg-slate-50 dark:bg-black  dark:text-white">
     <header class="bg-secondary text-primary sticky top-0 z-10">
         <section class="lg:max-w-8xl mx-auto p-4 flex justify-between items-center">
             <h1 class="text-4xl font-bold">
@@ -31,7 +31,7 @@
                 <h2 class="max-w-md text-4xl font-bold text-center  sm:text-5xl sm:text-center my-auto text-slate-900 dark:text-white">
                     Gabriel Cervantes Hernández
                 </h2>
-                <img src="./img/imagen_profesional.png" alt="imagen_profesional" class="w-40 rounded-full box shadow-lg shadow-tertiary dark:shadow-white">
+                <img src="./img/imagen_profesional.png" alt="imagen_profesional" class="w-32 xl:w-40 rounded-full box shadow-lg shadow-tertiary dark:shadow-white">
             </article>
         </section>
         <section class="max-w-full bg-secondary sm:flex sm:justify-between 2xl:px-96 rounded-lg font-bold sm:py-0 py-1 dark:text-black" >
@@ -145,7 +145,7 @@
             <div class="  ">
                 <h2 class="text-5xl text-center lg:mr-20  font-bold my-10 mx-auto">📞 Contacto 📞</h2>
 
-                <div class="px-10 py-10 lg:mr-20  dark:bg-slate-200 dark:border-secondary dark:border-8 rounded-lg dark:text-black font-semibold">
+                <div class="px-5 py-5 lg:mr-20  dark:bg-slate-200 dark:border-secondary dark:border-8 rounded-lg dark:text-black font-semibold">
 
                     <div class="mb-10 flex text-3xl justify-center">
                         <img src="./img/github.svg" class="w-20" alt="Github">
@@ -154,17 +154,17 @@
                         </div>
                     </div>
     
-                    <div class="my-10 flex text-2xl justify-center">
+                    <div class="my-10 flex text-xl justify-center">
                         <img src="./img/LinkedIn.png" class="w-20" alt="Github">
                         <div class="text-center my-auto ml-10">
                             <a href="https://www.linkedin.com/in/gabriel-cervantes-hernandez-0813b9226">Gabriel Cervantes Hernández</a>
                         </div>
                     </div>
     
-                    <div class="my-10 flex text-2xl justify-center ">
-                        <img src="./img/gmail.png" class="w-20 ml-14" alt="Github">
-                        <div class="max-w-xs text-center text-wrap my-auto ml-10 pr-12">
-                            <h2 class="break-words"> gabriel.cervantes0103@gmail.com</h2>
+                    <div class="my-10 flex text-xl justify-center ">
+                        <img src="./img/gmail.png" class="w-20  mb-5 " alt="Github">
+                        <div class=" text-center  my-auto ml-10 pr-12">
+                            <h2 class="">gabrielch1805 @gmail.com</h2>
                         </div>
                     </div>
 
