--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     </footer>
 
     <script src="./node_modules/feather-icons/dist/feather.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="./js/app.js"></script>
 
   </body>
