Modificar diseño pagina Inicio

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
       </nav>
 
       <h1
-        class="py-5 px-5 bg-secondary text-3xl font-bold text-white border-b-4 border-b-black lg:hidden"
+        class="py-5 px-5 bg-secondary text-xl sm:text-3xl font-bold text-white border-b-4 border-b-black lg:hidden"
       >
         Mi portafolio 🗂️
       </h1>
       <!-- Botón de menú que aparece solo en pantallas pequeñas -->
       <button
         id="menu-btn"
-        class="py-5 px-5 text-xl font-bold text-white border-black border-4 bg-secondary rounded-lg fixed top-4 right-4 z-50 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary lg:hidden"
+        class="sm:pt-3 sm:pb-2 sm:px-3  px-4 pt-2 pb-1 text-xl font-bold text-white border-4 border-black bg-secondary rounded-lg fixed top-3 right-4 z-50 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary lg:hidden"
       >
         ☰ Menu
       </button>
-
+      
       <!-- Menú lateral que se mostrará cuando se haga clic en el botón -->
       <div
         id="sidebar"
