--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="bg-background font-josefin">
     <header class="">
@@ -33,25 +33,25 @@
             class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
             <i data-feather="home"></i>
-            <a href="./index.html" class="pt-1 ml-2">Inicio</a>
+            <a href="../index.html" class="pt-1 ml-2">Inicio</a>
           </li>
           <li
             class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
             <i data-feather="info"></i>
-            <a href="./pages/sobre_mi.html" class="pt-1 ml-2">Sobre mí</a>
+            <a href="./sobre_mi.html" class="pt-1 ml-2">Sobre mí</a>
           </li>
           <li
             class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
             <i data-feather="code"></i>
-            <a href="./pages/proyectos.html" class="pt-1 ml-2">Proyectos</a>
+            <a href="./proyectos.html" class="pt-1 ml-2">Proyectos</a>
           </li>
           <li
             class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
             <i data-feather="mail"></i>
-            <a href="./pages/contacto.html" class="pt-1 ml-2">Contacto</a>
+            <a href="./contacto.html" class="pt-1 ml-2">Contacto</a>
           </li>
         </ul>
       </nav>
@@ -81,8 +81,8 @@
             <li
               class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
             >
-              <img src="./img/home.svg" alt="" /><a
-                href="./index.html"
+              <img src="../img/home.svg" alt="" /><a
+                href="../index.html"
                 class="hover:text-teal-300 pt-2"
                 >Inicio</a
               >
@@ -90,8 +90,8 @@
             <li
               class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
             >
-              <img src="./img/info.svg" alt="" /><a
-                href="./pages/sobre_mi.html"
+              <img src="../img/info.svg" alt="" /><a
+                href="./sobre_mi.html"
                 class="hover:text-teal-300 pt-2"
                 >Sobre mí</a
               >
@@ -99,8 +99,8 @@
             <li
               class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
             >
-              <img src="./img/work.svg" alt="" /><a
-                href="./pages/proyectos.html"
+              <img src="../img/work.svg" alt="" /><a
+                href="./proyectos.html"
                 class="hover:text-teal-300 pt-2"
                 >Proyectos</a
               >
@@ -108,8 +108,8 @@
             <li
               class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
             >
-              <img src="./img/contacto.svg" alt="" /><a
-                href="./pages/contacto.html"
+              <img src="../img/contacto.svg" alt="" /><a
+                href="./contacto.html"
                 class="hover:text-teal-300 pt-2"
                 >Contacto</a
               >
@@ -119,39 +119,63 @@
       </div>
     </header>
 
-    <main class="lg:py-40 pt-5 pb-8">
-      <section
-        class="lg:flex lg:justify-center lg:flex-row lg:items-center lg:gap-5"
-      >
-        <div class="lg:flex-col lg:w-1/2 lg:flex lg:items-center text-justify">
-          
-          <div class="max-lg:px-6">
-            <h1 class="text-5xl text-center bg-accent border-4 border-white rounded-lg px-3 py-5 mt-9 mb-10 max-lg:py-2 max-lg:px-5">
-              ¡Bienvenid@ a mi portafolio!
+    <main class="lg:pt-0 lg:pb-3 pt-5 pb-5">
+      <section class="lg:mt-8">
+        <div class="lg:flex lg:justify-center">
+          <div class="text-center mb-5 lg:w-2/6 max-lg:px-5">
+            <h1
+              class="text-4xl border-4 bg-accent py-5 rounded-lg border-white"
+            >
+              Detrás del código: ¿Quién soy?
             </h1>
           </div>
-
-          <p class="2xl:text-2xl text-xl my-4 max-lg:py-2 max-lg:px-5">
-            Soy Gabriel, desarrollador web especializado en back-end. Trabajo
-            con PHP, CodeIgniter 4, JavaScript, MySQL y más. Me apasiona la
-            programación, soy autodidacta y me adapto rápidamente a nuevos
-            retos.
-          </p>
-
-          <p
-            class="2xl:text-2xl text-center text-xl my-4 max-lg:py-2 max-lg:px-5"
-          >
-            ¡Espero que disfrutes explorando mi trabajo!
-          </p>
-
-          <p class="text-4xl text-center">👨🏽‍💻</p>
         </div>
+        <div class="lg:flex lg:justify-center">
+          <div class="lg:w-3/4">
+            <div class="flex lg:items-center lg:justify-center my-5  lg:gap-5 max-lg:flex-col max-lg:items-center">
+              <div class="lg:w-1/2 max-lg:w-3/4">
+                <p class="lg:text-2xl text-justify px-5 text-xl">
+                  ¡Hola! Soy Gabriel Cervantes Hernández, un desarrollador web
+                  con enfoque en back-end. Aunque tengo conocimientos en
+                  front-end, mi especialidad es la lógica del servidor y la
+                  gestión de bases de datos.
+                </p>
+              </div>
 
-        <img
-          src="./img/imagen_profesional.png"
-          class="lg:w-4/12 2xl:w-96 my-16 mx-auto lg:mx-5 rounded-full border-8 shadow-2xl shadow-black border-accent"
-          alt=""
-        />
+              <img src="../img/programming.png" class="lg:w-2/12 max-lg:w-1/4 max-lg:my-5" alt="" />
+            </div>
+
+            <div class="flex lg:items-center lg:justify-center my-5 lg:gap-5 max-lg:flex-col max-lg:items-center">
+              <img src="../img/PHP.png" class="lg:w-2/12 max-xl:hidden" alt="" />
+
+              <div class="lg:w-1/2 max-lg:w-3/4">
+                <p class="lg:text-2xl text-justify px-5 text-xl">
+                  Trabajo con tecnologías como PHP, CodeIgniter 4, JavaScript,
+                  MySQL, Tailwind CSS, Bootstrap y más. Además, sigo el patrón
+                  de diseño MVC y aplico metodologías ágiles para el desarrollo
+                  eficiente de proyectos.
+                </p>
+              </div>
+
+              <img src="../img/PHP.png" class="lg:w-2/12 lg:hidden max-lg:w-1/4 max-lg:my-5" alt="" />
+            </div>
+
+            <div class="flex lg:items-center lg:justify-center my-5 lg:gap-5 max-lg:flex-col max-lg:items-center">
+              <div class="lg:w-1/2  max-lg:w-3/4">
+                <p class="lg:text-2xl text-justify text-xl px-5">
+                  Soy una persona autodidacta, apasionada por la programación y
+                  siempre en búsqueda de nuevos aprendizajes. Me adapto
+                  fácilmente a distintos entornos de trabajo y disfruto
+                  colaborar en equipo para crear soluciones innovadoras y
+                  funcionales.
+                </p>
+              </div>
+
+                <img src="../img/autodidact.png" class="lg:w-2/12 max-lg:w-1/4 max-lg:my-5" alt="" />
+
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -161,8 +185,8 @@
       <p class="text-lg">Derechos reservados &copy; 2025</p>
     </footer>
 
-    <script src="./node_modules/feather-icons/dist/feather.min.js"></script>
+    <script src="../node_modules/feather-icons/dist/feather.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
