--- a/index.html
+++ b/index.html
@@ -30,28 +30,56 @@
           class="bg-secondary font-bold text-white text-xl justify-center gap-32 py-4 lg:flex hidden border-b-4 border-b-black"
         >
           <li
-            class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
+            class="flex items-center py-1 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
-            <i data-feather="home"></i>
-            <a href="./index.html" class="pt-1 ml-2">Inicio</a>
+            <a href="./index.html" class="flex items-center gap-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-8 w-8"
+                fill="currentColor"
+                viewBox="0 0 576 512"
+              >
+                <path
+                  d="M575.8 255.5c0 18-15 32.1-32 32.1l-32 0 .7 160.2c0 2.7-.2 5.4-.5 8.1l0 16.2c0 22.1-17.9 40-40 40l-16 0c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1L416 512l-24 0c-22.1 0-40-17.9-40-40l0-24 0-64c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32l0 64 0 24c0 22.1-17.9 40-40 40l-24 0-31.9 0c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2l-16 0c-22.1 0-40-17.9-40-40l0-112c0-.9 0-1.9 .1-2.8l0-69.7-32 0c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"
+                />
+              </svg>
+              <h2 class="text-2xl pt-2">Inicio</h2>
+            </a>
           </li>
           <li
-            class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
+            class="flex items-center py-1 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
-            <i data-feather="info"></i>
-            <a href="./pages/sobre_mi.html" class="pt-1 ml-2">Sobre mí</a>
+            <a href="./pages/sobre_mi.html" class="flex items-center gap-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-8 w-8"
+                fill="currentColor"
+                viewBox="0 0 448 512"
+              >
+                <path
+                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
+                />
+              </svg>
+              <h2 class="text-2xl pt-2">Sobre mí</h2>
+            </a>
           </li>
           <li
-            class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
+            class="flex items-center py-1 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
           >
-            <i data-feather="code"></i>
-            <a href="./pages/proyectos.html" class="pt-1 ml-2">Proyectos</a>
-          </li>
-          <li
-            class="flex items-center py-2 px-5 border-4 rounded-lg transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary"
-          >
-            <i data-feather="mail"></i>
-            <a href="./pages/contacto.html" class="pt-1 ml-2">Contacto</a>
+            <a href="./pages/proyectos.html" class="flex items-center gap-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-8 w-8"
+                fill="currentColor"
+                viewBox="0 0 640 512"
+              >
+                <path
+                  d="M64 96c0-35.3 28.7-64 64-64l384 0c35.3 0 64 28.7 64 64l0 256-64 0 0-256L128 96l0 256-64 0L64 96zM0 403.2C0 392.6 8.6 384 19.2 384l601.6 0c10.6 0 19.2 8.6 19.2 19.2c0 42.4-34.4 76.8-76.8 76.8L76.8 480C34.4 480 0 445.6 0 403.2zM281 209l-31 31 31 31c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-48-48c-9.4-9.4-9.4-24.6 0-33.9l48-48c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9zM393 175l48 48c9.4 9.4 9.4 24.6 0 33.9l-48 48c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l31-31-31-31c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z"
+                />
+              </svg>
+
+              <h2 class="text-2xl pt-2">Proyectos</h2>
+            </a>
           </li>
         </ul>
       </nav>
@@ -76,43 +104,83 @@
         <div
           class="absolute left-0 top-0 w-56 h-full bg-teal-800 text-white shadow-lg p-6"
         >
-          <h2 class="text-3xl font-bold mb-6">Menú</h2>
+          <h2
+            class="text-3xl font-bold mb-6 pt-1 border-4 border-white rounded-lg text-center"
+          >
+            Menú
+          </h2>
           <ul class="text-xl py-12 font-bold">
             <li
-              class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-16 px-2 py-3 border-4 rounded-lg border-white"
             >
-              <img src="./img/home.svg" alt="" /><a
-                href="./index.html"
-                class="hover:text-teal-300 pt-2"
-                >Inicio</a
-              >
+              <a href="./index.html" class="flex items-center gap-3">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6"
+                  fill="currentColor"
+                  viewBox="0 0 576 512"
+                >
+                  <path
+                    d="M575.8 255.5c0 18-15 32.1-32 32.1l-32 0 .7 160.2c0 2.7-.2 5.4-.5 8.1l0 16.2c0 22.1-17.9 40-40 40l-16 0c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1L416 512l-24 0c-22.1 0-40-17.9-40-40l0-24 0-64c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32l0 64 0 24c0 22.1-17.9 40-40 40l-24 0-31.9 0c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2l-16 0c-22.1 0-40-17.9-40-40l0-112c0-.9 0-1.9 .1-2.8l0-69.7-32 0c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"
+                  />
+                </svg>
+                <h2 class="text-2xl pt-2">Inicio</h2>
+              </a>
+            </li>
+            <li
+              class="flex items-stretch justify-center gap-2 mb-16 px-2 py-3 border-4 rounded-lg border-white"
+            >
+              <a href="./pages/sobre_mi.html" class="flex items-center gap-3">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6"
+                  fill="currentColor"
+                  viewBox="0 0 448 512"
+                >
+                  <path
+                    d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
+                  />
+                </svg>
+                <h2 class="text-2xl pt-2">Sobre mí</h2>
+              </a>
             </li>
             <li
               class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
             >
-              <img src="./img/info.svg" alt="" /><a
-                href="./pages/sobre_mi.html"
-                class="hover:text-teal-300 pt-2"
-                >Sobre mí</a
-              >
+              <a href="./pages/proyectos.html" class="flex items-center gap-3">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-7 w-7"
+                  fill="currentColor"
+                  viewBox="0 0 640 512"
+                >
+                  <path
+                    d="M64 96c0-35.3 28.7-64 64-64l384 0c35.3 0 64 28.7 64 64l0 256-64 0 0-256L128 96l0 256-64 0L64 96zM0 403.2C0 392.6 8.6 384 19.2 384l601.6 0c10.6 0 19.2 8.6 19.2 19.2c0 42.4-34.4 76.8-76.8 76.8L76.8 480C34.4 480 0 445.6 0 403.2zM281 209l-31 31 31 31c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-48-48c-9.4-9.4-9.4-24.6 0-33.9l48-48c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9zM393 175l48 48c9.4 9.4 9.4 24.6 0 33.9l-48 48c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l31-31-31-31c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z"
+                  />
+                </svg>
+
+                <h2 class="text-2xl pt-2">Proyectos</h2>
+              </a>
             </li>
-            <li
-              class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
-            >
-              <img src="./img/work.svg" alt="" /><a
-                href="./pages/proyectos.html"
-                class="hover:text-teal-300 pt-2"
-                >Proyectos</a
+
+            <li class="mb-10 flex justify-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-20 w-20"
+                fill="currentColor"
+                viewBox="0 0 512 512"
               >
+                fill="currentColor"
+                <path
+                  d="M184 48l144 0c4.4 0 8 3.6 8 8l0 40L176 96l0-40c0-4.4 3.6-8 8-8zm-56 8l0 40L64 96C28.7 96 0 124.7 0 160l0 96 192 0 128 0 192 0 0-96c0-35.3-28.7-64-64-64l-64 0 0-40c0-30.9-25.1-56-56-56L184 0c-30.9 0-56 25.1-56 56zM512 288l-192 0 0 32c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32l0-32L0 288 0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-128z"
+                />
+              </svg>
             </li>
-            <li
-              class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
-            >
-              <img src="./img/contacto.svg" alt="" /><a
-                href="./pages/contacto.html"
-                class="hover:text-teal-300 pt-2"
-                >Contacto</a
-              >
+            <li class="mb-5">
+              <h1 class="text-xl text-center">Gabriel Cervantes Hernandez</h1>
+            </li>
+            <li>
+              <h2 class="text-center">Derechos reservados &copy; 2025</h2>
             </li>
           </ul>
         </div>
@@ -124,9 +192,10 @@
         class="lg:flex lg:justify-center lg:flex-row lg:items-center lg:gap-5"
       >
         <div class="lg:flex-col lg:w-1/2 lg:flex lg:items-center text-justify">
-          
           <div class="max-lg:px-6">
-            <h1 class="text-5xl text-center bg-accent border-4 border-white rounded-lg px-3 py-5 mt-9 mb-10 max-lg:py-2 max-lg:px-5">
+            <h1
+              class="text-5xl text-center bg-accent border-4 border-white rounded-lg px-3 py-5 mt-9 mb-10 max-lg:py-2 max-lg:px-5"
+            >
               ¡Bienvenid@ a mi portafolio!
             </h1>
           </div>
@@ -156,9 +225,81 @@
     </main>
 
     <footer
-      class="bg-secondary py-5 flex justify-center text-white border-t-4 border-t-black"
+      class="bg-secondary pt-4 flex justify-center items-center max-sm:px-4 text-white border-t-4 border-t-black"
     >
-      <p class="text-lg">Derechos reservados &copy; 2025</p>
+      <div
+        class="flex lg:w-1/5 md:w-1/2 flex-col items-end justify-center mr-5"
+      >
+        <div class="flex text-center flex-col items-center">
+          <h2 class="text-3xl text-center font-extrabold mb-4">
+            ¡Conecta conmigo!
+          </h2>
+          <p class="text-lg mb-2">
+            Sígueme en mis redes sociales para estar al tanto de mis proyectos y
+            novedades.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex flex-col mb-3 gap-5">
+        <a
+          href="https://github.com/tuusuario"
+          target="_blank"
+          class="hover:text-primary transition-colors flex items-center gap-5"
+        >
+          <!-- Puedes usar un ícono SVG o un icono de una librería -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 .5C5.73.5.5 5.73.5 12c0 5.09 3.29 9.41 7.86 10.95.57.1.78-.25.78-.55 0-.27-.01-1.16-.01-2.1-3.2.7-3.87-1.54-3.87-1.54-.52-1.32-1.28-1.67-1.28-1.67-1.05-.73.08-.71.08-.71 1.16.08 1.77 1.2 1.77 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.75.4-1.26.73-1.55-2.55-.3-5.23-1.28-5.23-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.5.12-3.12 0 0 1-.32 3.3 1.2a11.4 11.4 0 0 1 3-.4c1.02.01 2.05.14 3 .4 2.3-1.53 3.3-1.2 3.3-1.2.65 1.62.25 2.82.12 3.12.75.82 1.2 1.86 1.2 3.12 0 4.44-2.68 5.4-5.23 5.7.42.36.78 1.07.78 2.16 0 1.55-.01 2.8-.01 3.18 0 .3.21.66.8.55A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5z"
+            />
+          </svg>
+
+          <h2 class="text-2xl">GitHub</h2>
+        </a>
+
+        <a
+          href="https://linkedin.com/in/tuusuario"
+          target="_blank"
+          class="hover:text-primary transition-colors flex items-center gap-5"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.041-1.851-3.041-1.853 0-2.136 1.445-2.136 2.941v5.669H9.354V9h3.414v1.561h.049c.477-.902 1.637-1.851 3.372-1.851 3.605 0 4.271 2.371 4.271 5.455v6.287zM5.337 7.433a2.065 2.065 0 1 1 0-4.13 2.065 2.065 0 0 1 0 4.13zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .77 0 1.723v20.554C0 23.23.792 24 1.771 24h20.451C23.206 24 24 23.23 24 22.277V1.723C24 .77 23.206 0 22.225 0z"
+            />
+          </svg>
+
+          <h2 class="text-2xl">LinkedIn</h2>
+        </a>
+
+        <a
+          href="https://twitter.com/tuusuario"
+          target="_blank"
+          class="hover:text-primary transition-colors flex items-center gap-5"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8"
+            fill="currentColor"
+            viewBox="0 0 512 512"
+          >
+            <path
+              d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"
+            />
+          </svg>
+
+          <h2 class="text-2xl">LinkedIn</h2>
+        </a>
+      </div>
     </footer>
 
     <script src="./node_modules/feather-icons/dist/feather.min.js"></script>
