Modificar footer minimo)

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             />
           </svg>
 
-          <h2 class="text-2xl">LinkedIn</h2>
+          <h2 class="text-2xl">Facebook</h2>
         </a>
       </div>
     </footer>
