--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -370,7 +370,7 @@
           </div>
         </div>
 
-        <div class="flex md:justify-center max-sm:flex-wrap mt-2 mb-5 gap-2 justify-items-center">
+        <div class="flex md:justify-center max-sm:flex-wrap max-sm: justify-center mt-2 mb-5 gap-2 justify-items-center">
           <div>
             <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
               Codeigniter 4
@@ -437,7 +437,7 @@
             id="closeModal"
             class="bg-red-500 text-white px-4 py-2 rounded shadow-md"
           >
-            Cerrar Modal
+            Cerrar
           </button>
 
           <a
