Modificar paleta de colores

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -225,7 +225,7 @@
                   decisiones y contribuye a la sostenibilidad institucional al
                   minimizar el uso de recursos físicos.
                 </p>
-                <button id="GIPP_btn" class="text-teal-600 hover:underline">
+                <button id="GIPP_btn" class="text-primary hover:underline">
                   <h1>Ver más detalles →</h1>
                 </button>
               </div>
@@ -251,7 +251,7 @@
                   información y moderniza la atención para un servicio más
                   eficiente y personalizado.
                 </p>
-                <button id="AIVI_btn" class="text-teal-600 hover:underline">
+                <button id="AIVI_btn" class="text-primary hover:underline">
                   <h1>Ver más detalles →</h1>
                 </button>
               </div>
@@ -260,7 +260,7 @@
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <div class="flex justify-center pt-3">
                 <img
-                  src="../img/tool-box.png"
+                  src="../img/soon.png"
                   alt="Proyecto de prácticas"
                   class="h-48 object-cover"
                 />
@@ -277,7 +277,7 @@
                 <a
                   href="#"
                   target="_blank"
-                  class="text-teal-600 hover:underline"
+                  class="text-primary hover:underline"
                 >
                   <!-- Ver más detalles → -->
                 </a>
