--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -258,7 +258,7 @@
               </div>
 
               <img
-                src="../img/autodidact.png"
+                src="../img/autodidacta.png"
                 class="lg:w-2/12 max-lg:w-1/4 max-lg:my-5"
                 alt=""
               />
